nuevos cambios en calendario main styles.css y angular.js

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -30,9 +30,9 @@
             ],
             "scripts": [
               "src/assets/leaflet/leaflet.js",
-              "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/@popperjs/core/dist/umd/popper.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/@popperjs/core/dist/umd/popper.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
